# dmarc-report-aggregator

./: .gitignore  Dockerfile  LICENSE  README.md  docker-build.sh  pyproject.toml  sendmail.py
dmarc_report_aggregator/: __main__.py  models.py  settings.py
dmarc_report_aggregator/smtp/: __init__.py  _handler.py  _parser.py
dmarc_report_aggregator/storage/: __init__.py  _load.py  _migration.py  _store.py
dmarc_report_aggregator/storage/migrations/: 1-setup.sql
dmarc_report_aggregator/web/: __init__.py  _auth.py  _index.py  _report.py
dmarc_report_aggregator/web/templates/: base.html.j2  index.html.j2  login.html.j2  report.html.j2
tests/: smtp_test.py
tests/real_reports/: aol.eml  fastmail.eml  google.eml  mailru.eml  outlook-enterprise.eml  outlook.eml  yahoo.eml
