[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "dmarc-report-aggregator"
description = "Receives DMARC reports via SMTP(S) and visualizes them via HTTP."
license = { file = "LICENSE" }
dynamic = ["version"]
authors = [{ name = "Maximilian Haye", email = "maxh@freitagsrunde.org" }]
requires-python = "== 3.11.*"
dependencies = [
    "aiosmtpd ~= 1.4",
    "aiohttp ~= 3.8",
    "aiodns ~= 3.0",
    "aiosqlite ~= 0.20.0",
    "aiohttp-jinja2 ~= 1.5",
    "ldap3 ~= 2.9",
    "pydantic-settings ~= 2.0",
    "defusedxml ~= 0.7.1",
    "pydantic ~= 2.6",
    "dkimpy[asyncio] ~= 1.1",
    "aiohttp-session[secure] ~= 2.12",
]

[project.optional-dependencies]
dev = [
    "pytest ~= 8.1",
    "pytest-asyncio ~= 0.23.6",
    "aiomonitor ~= 0.7.0",
]

[tool.pdm]
version = { source = "file", path = "dmarc_report_aggregator/__init__.py" }

[project.urls]
repository = "https://github.com/freitagsrunde/dmarc-report-aggregator"
